# tracegate

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PLAN.md  PRODUCT.md  README.md  pyproject.toml  requirements.txt  tracegate.toml
.github/workflows/: ci.yml  release.yml
_generated/: requirements.md
decisions/: 0001-implementation-language.md  0002-adapter-spi.md  0003-traceability-id-schema.md  0004-config-and-autodetect.md  0005-commodity-boundary.md  0006-output-model-and-gate.md  0007-canonical-file-paths.md  0008-build-artifact-soft-gate.md  0009-zero-config-canonical-output.md  0010-frontend-vitest-as-fe-category.md  README.md
docs/: INSTALL.md
docs/_generated/: MANIFEST.md  adr-index.md  coverage.md  dependencies.md  requirements-by-us.md  requirements.json  requirements.md  structure.md  todo.md
packaging/: build_binary.py  entry.py
src/tracegate/: __init__.py  __main__.py  check_spec_javadoc.py  cli.py  config.py  diff_requirements.py  generate_code_docs.py  generate_dora.py  generate_requirements.py  javadoc_render.py
src/tracegate/adapters/: __init__.py
src/tracegate/core/: __init__.py  config.py  detect.py  gate.py  ids.py  model.py  orchestrator.py  paths.py  render.py  specdoc.py
tests/: test_adapter_java.py  test_adapter_python.py  test_adapter_vitest.py  test_convergence.py  test_detect.py  test_diagrams.py  test_generate_requirements_golden.py  test_orchestrator.py  test_structure.py
tests/fixtures/: expected-requirements.md
tests/fixtures/gest-mini/: pom.xml
tests/fixtures/py-mini/: pyproject.toml
(+25 files in other folders)
